# G2HDM

./: .gitignore  .gitmodules  Install_packages.ipynb  LICENSE  main.py  main_higgstools.py  pyproject.toml  requirements.txt  run_G2HDM.bat  run_G2HDM.sh  setup.py
.ipynb_checkpoints/: Install_packages-checkpoint.ipynb
Documentation/: Commands_2HDM.txt  Quick Start.txt  READ ME.txt  TODO Notes.txt
G2HDM/: __init__.py
G2HDM/Model2HDM/: Model2HDM.py  class_Model2HDM.py  methods_Model2HDM.py  standard_fields.py  standard_potentials.py  standard_symbols.py
G2HDM/ModelCalculators/: Model2HDMCalculator.py  Model2HDMPlotter.py  ParameterSearch.py  __init__.py  couplings.py  derivativesVCW.py  thermal_functions.py
G2HDM/MultiProcessing/: __init__.py  class_MultiProcessing.py
G2HDM/ParameterSearch/: ParameterSearch.py  __init__.py  methods_ps.py  parameter_constraints.py
G2HDM/utils/: methods_data.py  methods_math.py
Models/: ParameterSearch.ipynb
Models/.ipynb_checkpoints/: ParameterSearch-checkpoint.ipynb
Models/setup/: init_models.py  init_potentials.py
Notebooks/: Debug.ipynb  Debug2.ipynb  General2HDM_gen.ipynb  General2HDM_higgs&gen.ipynb  General2HDM_higgsCB.ipynb  Parameter Search 2.ipynb  ParameterSearch.ipynb  importing.py
Notebooks/.ipynb_checkpoints/: General2HDM_debug-checkpoint.ipynb  Parameter Search 2-checkpoint.ipynb  ParameterSearch-checkpoint.ipynb
docs/: Description.txt  TODO.txt
src/: __init__.py
src/G2HDM/: __init__.py
src/Model2HDM/: ModelDataCalculator.py  ParameterSearch.py  class_Model2HDM.py  constraints.py  potentials.py  (+3 more)
(+57 files in other folders)
